changed isopod descriptions from normal body to h2

--- a/isopods.html
+++ b/isopods.html
@@ -39,7 +39,7 @@
                 Isopods are cute little guys. You may know them as woodlice or rolly pollys. Here are some pictures that i took of some isopods.
             </a>
             <hr>
-            <a id="garden">Here are some isopods that I found in my garden</a>
+            <h3><a id="garden">Here are some isopods that I found in my garden</a></h3>
             <br>
                 <img src="https://i.imgur.com/cGMfQDs.jpg" alt="Isopod in dirt sourunded by plants" class="imega">
                 <img src="https://i.imgur.com/iKFqVwU.jpg" alt="Isopod in dirt sourunded by plants" class="imega">
@@ -48,12 +48,12 @@
                 <img src="https://i.imgur.com/yBXodP7.jpg" alt="Isopod in dirt sourunded by plants" class="imega">
 
             <hr>
-            <a id="more">Here are some other isopods I found</a>
+            <h3><a id="more">Here are some other isopods I found</a></h3>
             <br>
             <img src="https://i.imgur.com/MU73lgQ.jpg" alt="Isopod in my hand" class="imega">
             <img src="https://i.imgur.com/VGAJBHk.jpg" alt="Isopod on bricks" class="imega">
             <hr>
-            <a id="notpod">This is not a isopod</a>
+            <h3><a id="notpod">This is not a isopod</a></h3>
             <br>
             <img src="https://i.imgur.com/Y6hnQby.jpg" alt="A squirl on a railing" class="imega">
         </div>
