--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
         <title>HorseScary</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+
+    <!--Font stuff-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
         <div class="grid-container">
+            <header>
+                <h1>HorseScary</h1>
+            </header>
 
+            <footer>
+                <a href="http://validator.w3.org/check?uri=https://horsescary.com/">
+                    <strong> HTML </strong> Valid! </a>
+                    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/">
+                    <strong> CSS </strong> Valid! </a>
+            </footer>
         </div>
     </body>
 </html>
