--- a/index.html
+++ b/index.html
@@ -18,6 +18,36 @@
                 <h1>HorseScary</h1>
             </header>
 
+            <section class="about">
+                <a href="pages/about.html">
+                    About Me
+                </a>
+            </section>
+
+            <section class="youtube">
+                <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA">
+                    YouTube
+                </a>
+            </section>
+
+            <section class="tiktok">
+                <a href="https://www.tiktok.com/@horsescary?lang=en">
+                    TikTok
+                </a>
+            </section>
+
+            <section class="tumblr">
+                <a href="pages/tumblr.html">
+                    Tumblr
+                </a>
+            </section>
+
+            <section class="github">
+                <a href="https://github.com/HorseScary">
+                    GitHub
+                </a>
+            </section>
+
             <footer>
                 <a href="http://validator.w3.org/check?uri=https://horsescary.com/">
                     <strong> HTML</strong> Valid! </a>
