finished buttons on main site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Font stuff-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=VT323&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
@@ -25,13 +25,13 @@
             </section>
 
             <section class="youtube">
-                <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA">
+                <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA" target="_blank">
                     YouTube
                 </a>
             </section>
 
             <section class="tiktok">
-                <a href="https://www.tiktok.com/@horsescary?lang=en">
+                <a href="https://www.tiktok.com/@horsescary?lang=en" target="_blank">
                     TikTok
                 </a>
             </section>
@@ -43,7 +43,7 @@
             </section>
 
             <section class="github">
-                <a href="https://github.com/HorseScary">
+                <a href="https://github.com/HorseScary" target="_blank">
                     GitHub
                 </a>
             </section>
