changed section tags to div

--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
             About Me
         </h1>
 
-        <section class="info">
+        <div class="info">
             <p>
                 She/Her | Almost not a minor | Not cis
             </p>
