--- a/index.html
+++ b/index.html
@@ -18,35 +18,35 @@
                 <h1>HorseScary</h1>
             </header>
 
-            <section class="about">
+            <div class="about">
                 <a href="pages/about.html">
                     About Me
                 </a>
-            </section>
+            </div>
 
-            <section class="youtube">
+            <div class="youtube">
                 <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA" target="_blank">
                     YouTube
                 </a>
-            </section>
+            </div>
 
-            <section class="tiktok">
+            <div class="tiktok">
                 <a href="https://www.tiktok.com/@horsescary?lang=en" target="_blank">
                     TikTok
                 </a>
-            </section>
+            </div>
 
-            <section class="tumblr">
+            <div class="tumblr">
                 <a href="pages/tumblr.html">
                     Tumblr
                 </a>
-            </section>
+            </div>
 
-            <section class="github">
+            <div class="github">
                 <a href="https://github.com/HorseScary" target="_blank">
                     GitHub
                 </a>
-            </section>
+            </div>
 
             <footer>
                 <a href="http://validator.w3.org/check?uri=https://horsescary.com/">
