--- a/pages/tumblr.html
+++ b/pages/tumblr.html
@@ -69,29 +69,29 @@
                 </h1>
             </header>
 
-            <section class="skyblock">
+            <div class="skyblock">
                 <a href="https://hypixelskyblock.tumblr.com/">
                     HypixelSkyblock
                 </a>         
-            </section>
+            </div>
 
-            <section class="mainblog">
+            <div class="mainblog">
                 <a href="https://horsescary.tumblr.com/">
                     HorseScary
                 </a>
-            </section>
+            </div>
 
-            <section class="sideblog">
+            <div class="sideblog">
                 <a href="https://marescary.tumblr.com/">
                     MareScary
                 </a>
-            </section>
+            </div>
 
-            <section class="back">
+            <div class="back">
                 <a href="../index.html">
                     Back
                 </a>
-            </section>
+            </div>
 
             <footer>
                 <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/tumblr.html">
