--- a/pages/about.html
+++ b/pages/about.html
@@ -35,29 +35,30 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=VT323&display=swap" rel="stylesheet"> 
-
     </head>
 
-    <header>
-        <h1>
-            About Me
-        </h1>
+    <body>
+        <header>
+            <h1>
+                About Me
+            </h1>
+        </header>
 
         <div class="info">
             <p>
                 She/Her | Almost not a minor | Not cis
             </p>
-        </section>
+        </div>
 
-        <section class="about">
+        <div class="about">
             Hi! I'm Horse. Currently im doing a lot of web development stuff (mostly just html/css rn but I'm working on learning php/drupal). I also play guitar, and I've played a lot of hypixel skyblock (tho im not really playing anymore). 
-        </section>
+        </div>
 
-        <section class="back">
+        <div class="back">
             <a href="../index.html">
                 Back
             </a>
-        </section>
+        </div>
 
         <footer>
             <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/about.html">
@@ -65,5 +66,6 @@
                 <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/about.html">
                 <strong> CSS</strong> Valid! </a>
         </footer>
-    </header>
+    </body>
+
 </html>
