--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                 </a>
             </div>
 
+            <div class="other">
+                <a href="pages/other.html">
+                    Other Projects
+                </a>
+            </div>
+
             <footer>
                 <a href="http://validator.w3.org/check?uri=https://horsescary.com/">
                     <strong> HTML</strong> Valid! </a>
