removed multiple instances of minigrid

--- a/pages/other.html
+++ b/pages/other.html
@@ -32,14 +32,14 @@
             background-color: #1db47a;
             padding: .5vw;
         }
-        #miniGrid a {
+        .miniGrid a {
             color: #024b08;
 
             border: 1px solid #1db47a;
             border-radius: 5px;
             padding: .3vw;
         }
-        #miniGrid a:hover {
+        .miniGrid a:hover {
             background-color: #024b08;
             color: #1db47a;
         }
@@ -81,7 +81,7 @@
             </h1>
         </header>
 
-        <div class="smash" id="miniGrid">
+        <div class="smash miniGrid">
             <div class="project">
                 <a href="https://horsescary.com/keysmash-generator/">
                     Keysmash Generator:
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="golf" id="miniGrid">
+        <div class="golf miniGrid">
             <div class="project">
                 <a href="https://github.com/HorseScary/Golf">
                     Code Golf:
