added meta tag to index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>HorseScary</title>
         <meta charset="utf-8">
+        <meta name="description" content="honse">
         <link rel="stylesheet" href="style.css">
 
     <!--Font stuff-->
