changed description meta tag to have horse plinko

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>HorseScary</title>
         <meta charset="utf-8">
-        <meta name="description" content="honse">
+        <meta name="description" content="https://tenor.com/view/horse-plinko-gif-23007413">
         <link rel="stylesheet" href="style.css">
 
     <!--Font stuff-->
