added horse plinko?

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <title>HorseScary</title>
         <meta charset="utf-8">
-        <meta name="description" content="https://tenor.com/view/horse-plinko-gif-23007413">
+        <meta name="description" content="Honse">
+        <meta property="og-image" content="https://tenor.com/view/horse-plinko-gif-23007413">
         <link rel="stylesheet" href="style.css">
 
     <!--Font stuff-->
