fixed horse plinko link (i think)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>HorseScary</title>
         <meta charset="utf-8">
         <meta name="description" content="Honse">
-        <meta property="og-image" content="https://tenor.com/view/horse-plinko-gif-23007413">
+        <meta property="og-image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
         <link rel="stylesheet" href="style.css">
 
     <!--Font stuff-->
