--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <title>HorseScary</title>
         <meta charset="utf-8">
         <meta name="description" content="Honse">
+        
+        <meta property="og-title" content="Honse">
+        <meta property="og-type" content="article">
         <meta property="og-image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+
         <link rel="stylesheet" href="style.css">
 
     <!--Font stuff-->
