--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <meta property="og-title" content="Honse">
         <meta property="og-type" content="article">
         <meta property="og-image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+        
+        <meta property="twitter-image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
 
         <link rel="stylesheet" href="style.css">
 
