--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta charset="utf-8">
         <meta name="description" content="Honse">
         
-        <meta property="og-title" content="Honse">
-        <meta property="og-type" content="article">
-        <meta property="og-image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+        <meta property="og:title" content="Honse">
+        <meta property="og:type" content="article">
+        <meta property="og:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
         
-        <meta property="twitter-image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+        <meta property="twitter:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
 
         <link rel="stylesheet" href="style.css">
 
