--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <title>HorseScary</title>
         <meta charset="utf-8">
         <meta name="description" content="Honse">
-        
+
+       <!--Essential meta tags?--> 
         <meta property="og:title" content="Honse">
         <meta property="og:type" content="article">
         <meta property="og:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
-        
-        <meta property="twitter:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+        <meta property="og-url" content="https://horsescary.com/">
+        <meta name="twitter:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
 
         <link rel="stylesheet" href="style.css">
 
