--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
        <!--Essential meta tags?--> 
         <meta property="og:title" content="Honse">
+        <meta property="og:description" content="Honse">
         <meta property="og:type" content="article">
         <meta property="og:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
         <meta property="og-url" content="https://horsescary.com/">
