added link to testing or somthing

--- a/pages/other.html
+++ b/pages/other.html
@@ -104,6 +104,18 @@
                 Code golf is the art of solving programing problems in as few characters as possible. Im not that good at it but I think its fun. This is my repository where all my golfing is stored. You can try out code golf yourself at <a href="https://code.golf/">code.golf</a>
             </div>
         </div>
+        
+        <div class="rand minigrid">
+            <div class="project">
+                <a href="https://www.horsescary.com/testing-or-something">
+                    Testing or Something
+                </a>
+            </div>
+
+            <div class="description">
+                Repo with a bunch of random stuff that I didn't want to make a separate repo for.
+            </div>
+        </div>
 
         <div class="back">
             <a href="../index.html">
