--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:description" content="HorseScary's cool and epic website.">
         <meta property="og:type" content="article">
         <meta property="og:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
-        <meta property="og-url" content="https://horsescary.com/">
+        <meta property="og:url" content="https://horsescary.com/">
         <meta name="twitter:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
 
         <link rel="stylesheet" href="style.css">
