--- a/new-new-site/index.html
+++ b/new-new-site/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>HorseScary</title>
-        <style>
-            @import url(style.css);
-        </style>
-    </head>
-    <body>
-        <container>
-            <header>
-                <h1>HorseScary</h1>
-            </header>
-            
-            <nav>
+
+<head>
+    <meta charset="utf-8">
+    <title>HorseScary</title>
+    <style>
+        @import url(style.css);
+    </style>
+
+    <!--Font stuff-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=VT323&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <container>
+        <header>
+            <h1>HorseScary</h1>
+        </header>
+
+        <nav>
+            <div class="grid-item">
                 <a href="pages/about.html">About</a>
+            </div>
+            <div class="grid-item">
                 <a href="pages/projects.html">Projects</a>
+            </div>
+            <div class="grid-item">
                 <a href="pages/social.html">Socials</a>
-            </nav>
-            <footer>
-                footer
-            </footer>
-        </container>
-        </body>
+            </div>
+        </nav>
+        <footer>
+            <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
+            <a href="http://validator.w3.org/check?uri=https://horsescary.com/">
+                <strong> HTML</strong> Valid! </a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/">
+                <strong> CSS</strong> Valid! </a>
+        </footer>
+    </container>
+</body>
+
 </html>
