--- a/new-new-site/index.html
+++ b/new-new-site/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>HorseScary</title>
-    <style>
+    <style id="style">
         @import url(style.css);
     </style>
 
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=VT323&display=swap" rel="stylesheet">
+
+    <!--javascript shit-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="mobile.js"></script>
 </head>
 
 <body>
