--- a/new-new-site/index.html
+++ b/new-new-site/index.html
@@ -24,7 +24,7 @@
             <h1>HorseScary</h1>
         </header>
 
-        <nav>
+        <div class="grid-container">
             <div class="grid-item">
                 <a href="pages/about.html">About</a>
             </div>
@@ -34,7 +34,8 @@
             <div class="grid-item">
                 <a href="pages/social.html">Socials</a>
             </div>
-        </nav>
+        </div>
+
         <footer>
             <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
             <a href="http://validator.w3.org/check?uri=https://horsescary.com/">
