added content to about and socials

--- a/new-new-site/pages/about.html
+++ b/new-new-site/pages/about.html
@@ -13,6 +13,13 @@
     <header>
         <h1>About</h1>
     </header>
+    <nav>
+        <a href="../index.html">Back</a>
+    </nav>
+    <main>
+        <h2>Horse | almost not a minor | she/her</h2>
+        <p>Programer i guess, avid Minecraft player.</p>
+    </main>
 </body>
 
 </html>
