--- a/new-new-site/pages/social.html
+++ b/new-new-site/pages/social.html
@@ -13,6 +13,16 @@
     <header>
         <h1>Socials</h1>
     </header>
+    <nav>
+        <a href="../index.html">Back</a>
+    </nav>
+    <main>
+        <a href="https://horsescary.tumblr.com/">Tumblr</a>
+        <a href="https://github.com/HorseScary">GitHub</a>
+        <a href="https://www.twitch.tv/horsescary">Twitch</a>
+        <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA">YouTube</a>
+        <p>HorseScary#2804 on discord</p>
+    </main>
 </body>
 
 </html>
