changed socials to use a list, added validation links to all pages

--- a/new-new-site/pages/about.html
+++ b/new-new-site/pages/about.html
@@ -20,6 +20,14 @@
         <h2>Horse | almost not a minor | she/her</h2>
         <p>Programer i guess, avid Minecraft player.</p>
     </main>
+
+    <footer>
+        <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
+        <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/about.html">
+            <strong> HTML</strong> Valid! </a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/about.html">
+            <strong> CSS</strong> Valid! </a>
+    </footer> 
 </body>
 
 </html>
