--- a/new-new-site/pages/projects.html
+++ b/new-new-site/pages/projects.html
@@ -13,6 +13,14 @@
     <header>
         <h1>Projects</h1>
     </header>
+
+    <footer>
+        <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
+        <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/projects.html">
+            <strong> HTML</strong> Valid! </a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/projects.html">
+            <strong> CSS</strong> Valid! </a>
+    </footer>
 </body>
 
 </html>
