--- a/new-new-site/pages/social.html
+++ b/new-new-site/pages/social.html
@@ -17,12 +17,32 @@
         <a href="../index.html">Back</a>
     </nav>
     <main>
-        <a href="https://horsescary.tumblr.com/">Tumblr</a>
-        <a href="https://github.com/HorseScary">GitHub</a>
-        <a href="https://www.twitch.tv/horsescary">Twitch</a>
-        <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA">YouTube</a>
-        <p>HorseScary#2804 on discord</p>
+        <ul>
+            <li>
+                <a href="https://horsescary.tumblr.com/">Tumblr</a>
+            </li>
+            <li>
+                <a href="https://github.com/HorseScary">GitHub</a>
+            </li>
+            <li>
+                <a href="https://www.twitch.tv/horsescary">Twitch</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA">YouTube</a>
+            </li>
+            <li>
+                HorseScary#2804 on discord
+            </li>
+        </ul>
     </main>
+
+    <footer>
+        <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
+        <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/socials.html">
+            <strong> HTML</strong> Valid! </a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/socials.html">
+            <strong> CSS</strong> Valid! </a>
+    </footer>
 </body>
 
 </html>
