added content to projects

--- a/new-new-site/pages/projects.html
+++ b/new-new-site/pages/projects.html
@@ -13,6 +13,21 @@
     <header>
         <h1>Projects</h1>
     </header>
+    <nav>
+        <a href="../index.html">Back</a>
+    </nav>
+    <main>
+        <ul>
+            <li>
+                <a href="https://horsescary.com/keysmash-generator/" class="link">Keysmash Generator</a>
+                <div class="description">A website that gives you a randomly generated string of charecters (a virtual keysmash).</div>
+            </li>
+            <li>
+                <a href="https://horsescary.com/dungeon-game/" class="link">Dungeon Game</a>
+                <div class="description">A web based dungeon crawler (currently very unfinished)</div>
+            </li>
+        </ul>
+    </main>
 
     <footer>
         <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
