Put links to projects inside of a div with class link Finished adding style to projects page Changed color of body to dark green

--- a/new-new-site/pages/projects.html
+++ b/new-new-site/pages/projects.html
@@ -5,6 +5,7 @@
     <title>Projects</title>
     <meta charset="utf-8">
     <style>
+        @import url(../style.css);
         @import url(pagestyle.css);
     </style>
     <!--Font stuff-->
@@ -22,12 +23,19 @@
     </nav>
     <main>
         <ul>
-            <li>
-                <a href="https://horsescary.com/keysmash-generator/" class="link">Keysmash Generator</a>
-                <div class="description">A website that gives you a randomly generated string of charecters (a virtual keysmash).</div>
+            <li class="proj">
+                <div class="link">
+                    <a href="https://horsescary.com/keysmash-generator/">Keysmash Generator:</a>
+                </div>
+                <div class="description">
+                    A website that gives you a randomly generated string of charecters (a virtual keysmash).
+                </div>
             </li>
-            <li>
-                <a href="https://horsescary.com/dungeon-game/" class="link">Dungeon Game</a>
+
+            <li class="proj">
+                <div class="link">
+                    <a href="https://horsescary.com/dungeon-game/">Dungeon Game:</a>
+                </div>
                 <div class="description">A web based dungeon crawler (currently very unfinished)</div>
             </li>
         </ul>
