added right and left padding to grid items (index) Added font and font size to body (index) Changed socials from a list to flexbox

--- a/new-new-site/pages/social.html
+++ b/new-new-site/pages/social.html
@@ -5,6 +5,7 @@
     <title>Socials</title>
     <meta charset="utf-8">
     <style>
+        @import url(../style.css);
         @import url(pagestyle.css);
     </style>
     <!--Font stuff-->
@@ -20,24 +21,27 @@
     <nav>
         <a href="../index.html">Back</a>
     </nav>
-    <main>
-        <ul>
-            <li>
+    <main id="soc">
+        <div class="flex-container">
+            <div class="flex-item">
                 <a href="https://horsescary.tumblr.com/">Tumblr</a>
-            </li>
-            <li>
+            </div>
+            <div class="flex-item">
                 <a href="https://github.com/HorseScary">GitHub</a>
-            </li>
-            <li>
+            </div>
+            <div class="flex-item">
                 <a href="https://www.twitch.tv/horsescary">Twitch</a>
-            </li>
-            <li>
+            </div>
+            <div class="flex-item">
                 <a href="https://www.youtube.com/channel/UCDsjMp9ro_tPDirSQt5gtGA">YouTube</a>
-            </li>
-            <li>
-                HorseScary#2804 on discord
-            </li>
-        </ul>
+            </div>
+            <div class="flex-item">
+                <a href="https://www.tiktok.com/@horsescary?lang=en">TikTok</a>
+            </div>
+        </div>
+        <div id="discord">
+            Contact me at HorseScary#2804 on discord!
+        </div>
     </main>
 
     <footer>
