aligned discord to center, removed exlamation point

--- a/new-new-site/pages/social.html
+++ b/new-new-site/pages/social.html
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div id="discord">
-            Contact me at HorseScary#2804 on discord!
+            Contact me at HorseScary#2804 on discord
         </div>
     </main>
 
