added style to back button

--- a/new-new-site/pages/about.html
+++ b/new-new-site/pages/about.html
@@ -5,6 +5,7 @@
     <title>About</title>
     <meta charset="utf-8">
     <style>
+        @import url(../style.css);
         @import url(pagestyle.css);
     </style>
     <!--Font stuff-->
