--- a/new-new-site/pages/about.html
+++ b/new-new-site/pages/about.html
@@ -18,9 +18,10 @@
     <header>
         <h1>About</h1>
     </header>
-    <nav>
-        <a href="../index.html">Back</a>
-    </nav>
+    <div class="back">
+        <a href="../index.html">Home</a>
+    </div>
+
     <main>
         <h2>Horse | almost not a minor | she/her</h2>
         <p>Programer i guess, avid Minecraft player.</p>
@@ -32,7 +33,7 @@
             <strong> HTML</strong> Valid! </a>
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/about.html">
             <strong> CSS</strong> Valid! </a>
-    </footer> 
+    </footer>
 </body>
 
 </html>
