finished style for about

--- a/new-new-site/pages/about.html
+++ b/new-new-site/pages/about.html
@@ -18,13 +18,15 @@
     <header>
         <h1>About</h1>
     </header>
-    <div class="back">
+    <nav>
         <a href="../index.html">Home</a>
-    </div>
+    </nav>
 
     <main>
-        <h2>Horse | almost not a minor | she/her</h2>
-        <p>Programer i guess, avid Minecraft player.</p>
+        <div id="about-container">
+            <h2>Horse | almost not a minor | she/her</h2>
+            <p>Programer i guess, avid Minecraft player.</p>
+        </div>
     </main>
 
     <footer>
