--- a/pages/about.html
+++ b/pages/about.html
@@ -1,71 +1,41 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <title>
-            About Me!
-        </title>
-        <meta charset="utf-8">
-        <style>
-            @import url(pagestyle.css);
 
-            .info p {
-                border: 1px solid #1db47a;
-                border-radius: 5px;
-   
-                padding: 1vw;
-                margin-left: 20vw;
-                margin-right: 20vw;
+<head>
+    <title>About</title>
+    <meta charset="utf-8">
+    <style>
+        @import url(../style.css);
+        @import url(pagestyle.css);
+    </style>
+    <!--Font stuff-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=VT323&display=swap" rel="stylesheet">
+</head>
 
-                color: #024b08;
-                background-color: #1db47a;
+<body>
+    <header>
+        <h1>About</h1>
+    </header>
+    <nav>
+        <a href="../index.html">Home</a>
+    </nav>
 
-                font-size: 2vw;
-                font-family: 'Fjalla', sans-serif;
-            }
-
-            .about {
-                font-family: 'Fjalla', sans-serif;
-                font-size: 1vw;
-
-                margin: 5vw;
-            }
-        </style>
-<!--Font stuff-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=VT323&display=swap" rel="stylesheet"> 
-    </head>
-
-    <body>
-        <header>
-            <h1>
-                About Me
-            </h1>
-        </header>
-
-        <div class="info">
-            <p>
-                She/Her | Almost not a minor | Not cis
-            </p>
+    <main>
+        <div id="about-container">
+            <h2>Horse | almost not a minor | she/her</h2>
+            <p>Programer i guess, avid Minecraft player.</p>
         </div>
+    </main>
 
-        <div class="about">
-            Hi! I'm Horse. Currently im doing a lot of web development stuff (mostly just html/css rn but I'm working on learning php/drupal). I also play guitar, and I've played a lot of hypixel skyblock (tho im not really playing anymore). 
-        </div>
-
-        <div class="back">
-            <a href="../index.html">
-                Back
-            </a>
-        </div>
-
-        <footer>
-            <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/about.html">
-                <strong> HTML</strong> Valid! </a>
-                <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/about.html">
-                <strong> CSS</strong> Valid! </a>
-        </footer>
-    </body>
+    <footer>
+        <a href="https://github.com/HorseScary/horsescary.github.io">Website Repo</a>
+        <a href="http://validator.w3.org/check?uri=https://horsescary.com/pages/about.html">
+            <strong> HTML</strong> Valid! </a>
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://horsescary.com/pages/about.html">
+            <strong> CSS</strong> Valid! </a>
+    </footer>
+</body>
 
 </html>
