added the meta tags to index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <!--javascript shit-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="mobile.js"></script>
+
+    <!--Meta tags for info and stuff-->
+    <meta property="og:title" content="Honse">
+    <meta property="og:site_name" content="HorseScary">
+    <meta property="og:description" content="HorseScary's cool and epic website.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+    <meta property="og:url" content="https://horsescary.com/">
+    <meta name="twitter:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
 </head>
 
 <body>
