added meta tags in attempt to make horse plinko larger on embed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="og:description" content="HorseScary's cool and epic website.">
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
+    <meta property="twitter:card" content="summery_large_image">
     <meta property="og:url" content="https://horsescary.com/">
     <meta name="twitter:image" content="https://c.tenor.com/2go__Sq_LiwAAAAd/horse-plinko.gif">
 </head>
