updated style of projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,8 +22,8 @@
         <a href="../index.html">Back</a>
     </nav>
     <main>
-        <ul>
-            <li class="proj">
+        <ul id="projects">
+            <li>
                 <div class="link">
                     <a href="https://horsescary.com/keysmash-generator/">Keysmash Generator:</a>
                 </div>
@@ -32,11 +32,13 @@
                 </div>
             </li>
 
-            <li class="proj">
+            <li>
                 <div class="link">
                     <a href="https://horsescary.com/dungeon-game/">Dungeon Game:</a>
                 </div>
-                <div class="description">A web based dungeon crawler (currently very unfinished)</div>
+                <div class="description">
+                    A web based dungeon crawler (currently very unfinished)
+                </div>
             </li>
         </ul>
     </main>
