added link to horse weight to projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -38,6 +38,14 @@
                 </div>
                 <div class="description">A web based dungeon crawler (currently very unfinished)</div>
             </li>
+
+            <li class="proj">
+                <div class="link">
+                    <div class="link" <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
+                    </div>
+                    <div class="description">The most innovative weight system to ever be seen by hypixel skyblock</div>
+                </div>
+            </li>
         </ul>
     </main>
 
