--- a/pages/about.html
+++ b/pages/about.html
@@ -24,7 +24,7 @@
 
     <main>
         <div id="about-container">
-            <h2>Horse | almost not a minor | she/her</h2>
+            <h2>Horse | not a minor | she/her</h2>
             <p>Programer i guess, avid Minecraft player.</p>
         </div>
     </main>
