fixed horse weight link in projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -41,11 +41,12 @@
                 </div>
             </li>
 
-            <li class="proj">
+            <li>
                 <div class="link">
-                    <div class="link" <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
-                    </div>
-                    <div class="description">The most innovative weight system to ever be seen by hypixel skyblock</div>
+                    <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
+                </div>
+                <div class="description">
+                    The most innovative weight system to ever be seen by hypixel skyblock
                 </div>
             </li>
         </ul>
