reformated "projects" to simplified version

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,6 +8,9 @@
         @import url(../style.css);
         @import url(pagestyle.css);
     </style>
+
+    <script src="projects.js"></script>
+
     <!--Font stuff-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,28 +27,22 @@
     <main>
         <ul id="projects">
             <li>
-                <div class="link">
-                    <a href="https://horsescary.com/keysmash-generator/">Keysmash Generator:</a>
-                </div>
-                <div class="description">
+                <a href="https://horsescary.com/keysmash-generator/">Keysmash Generator:</a>
+                <div>
                     A website that gives you a randomly generated string of charecters (a virtual keysmash).
                 </div>
             </li>
 
             <li>
-                <div class="link">
-                    <a href="https://horsescary.com/dungeon-game/">Dungeon Game:</a>
-                </div>
-                <div class="description">
+                <a href="https://horsescary.com/dungeon-game/">Dungeon Game:</a>
+                <div>
                     A web based dungeon crawler (currently very unfinished)
                 </div>
             </li>
 
             <li>
-                <div class="link">
-                    <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
-                </div>
-                <div class="description">
+                <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
+                <div>
                     The most innovative weight system to ever be seen by hypixel skyblock
                 </div>
             </li>
