added python brainfuck to projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -52,6 +52,13 @@
                     The most innovative weight system to ever be seen by hypixel skyblock
                 </div>
             </li>
+
+            <li>
+                <a href="https://github.com/HorseScary/python-brainfuck">Python BrainFuck</a>
+                <div>
+                    A cli brainfuck interpreter written in python. Can be installed using pip.
+                </div>
+            </li>
         </ul>
 
         <div class="subheading">
