removed unused container tag

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,7 +28,8 @@
     <main>
         <div class="subheading">
             <h2>Current Projects</h2>
-            <p>Projects that actually exist. They're in various states of completion and some may never get finished, but they do exist</p>
+            <p>Projects that actually exist. They're in various states of completion and some may never get finished,
+                but they do exist</p>
         </div>
 
         <ul class="projects">
@@ -49,7 +50,7 @@
             <li>
                 <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
                 <div>
-                    The most innovative weight system to ever be seen by hypixel skyblock
+                    The most innovative weight system to ever be seen by the hypixel skyblock community
                 </div>
             </li>
 
@@ -63,21 +64,27 @@
 
         <div class="subheading">
             <h2>Project Ideas</h2>
-            <p>Ideas for projects, however far-fetched and time consuming they may be. Some if not all of these may never get made, but you know what they say, "dream of shooting for the stars, its probably never gonna happen but it would be cool if it did."</p>
+            <p>Ideas for projects, however far-fetched and time consuming they may be. Some if not all of these may
+                never get made, but you know what they say, "dream of shooting for the stars, its probably never gonna
+                happen but it would be cool if it did."</p>
         </div>
 
         <ul class="projects">
             <li>
                 <div>CMS (name tbd)</div>
                 <div>
-                    I think making my own CMS would be a cool project. I thought about how I would do it for a little bit, but decided not to try after I realized like the first thing I would need to do was make user verification. Maybe i'll do this once I actually understand databases and encryption. 
+                    I think making my own CMS would be a cool project. I thought about how I would do it for a little
+                    bit, but decided not to try after I realized like the first thing I would need to do was make user
+                    verification. Maybe i'll do this once I actually understand databases and encryption.
                 </div>
             </li>
 
             <li>
                 <div>Horsx</div>
                 <div>
-                    My own operating system. It would be like a linux clone (named in a similar fashion to linux). I think it would be cool to make my own os, but I would need to be a waaaaay better programer, along with needing a far better understanding of how computers work.
+                    My own operating system. It would be like a linux clone (named in a similar fashion to linux). I
+                    think it would be cool to make my own os, but I would need to be a waaaaay better programer, along
+                    with needing a far better understanding of how computers work.
                 </div>
             </li>
         </ul>
