added HJES, updated order of items

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,11 +28,24 @@
     <main>
         <div class="subheading">
             <h2>Current Projects</h2>
-            <p>Projects that actually exist. They're in various states of completion and some may never get finished,
-                but they do exist</p>
+            <p>Projects in various states of completion. Probably not going to finish some of these.</p>
         </div>
 
         <ul class="projects">
+            <li>
+                <a href="https://github.com/HorseScary/python-brainfuck">Python BrainFuck</a>
+                <div>
+                    A cli brainfuck interpreter written in python. Can be installed using pip.
+                </div>
+            </li>
+
+            <li>
+                <a href="https://horsescary.com/HJES/">HJES</a>
+                <div>
+                    Hypixel Skyblock ChatTriggers module.
+                </div>
+            </li>
+
             <li>
                 <a href="https://horsescary.com/keysmash-generator/">Keysmash Generator:</a>
                 <div>
@@ -40,12 +53,7 @@
                 </div>
             </li>
 
-            <li>
-                <a href="https://horsescary.com/dungeon-game/">Dungeon Game:</a>
-                <div>
-                    A web based dungeon crawler (currently very unfinished)
-                </div>
-            </li>
+
 
             <li>
                 <a href="https://horsescary.com/Horse-Weight/">Horse Weight:</a>
@@ -55,9 +63,9 @@
             </li>
 
             <li>
-                <a href="https://github.com/HorseScary/python-brainfuck">Python BrainFuck</a>
+                <a href="https://horsescary.com/dungeon-game/">Dungeon Game:</a>
                 <div>
-                    A cli brainfuck interpreter written in python. Can be installed using pip.
+                    A web based dungeon crawler (currently very unfinished)
                 </div>
             </li>
         </ul>
